VSE: Aborting move operation with rightclick does not reset channel #114787

Closed
opened 2023-11-13 12:27:15 +01:00 by Simon Thommes · 1 comment
Member

System Information
Operating system: Linux-6.5.7-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.113.01

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-12 15:36, hash: 3816fcd8611b
Worked: (newest version of Blender that worked as expected)

Short description of error

Exact steps for others to reproduce the error

  • new video editing file
  • create strip
  • press g to move
  • abort with rightclick after moving to a different channel
**System Information** Operating system: Linux-6.5.7-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.113.01 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-12 15:36, hash: `3816fcd8611b` Worked: (newest version of Blender that worked as expected) **Short description of error** <video src="/attachments/94617ec4-3ccb-46af-964a-1aaa0788605f" title="bug-vse_rightclick_abort-2023-11-13_12.25.49.mp4" controls></video> **Exact steps for others to reproduce the error** - new video editing file - create strip - press g to move - abort with rightclick after moving to a different channel
Simon Thommes added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-11-13 12:27:16 +01:00
Iliya Katushenock added the
Interest
Video Sequencer
label 2023-11-13 13:13:55 +01:00

Thanks for the report. I can confirm.
It looks like a regression introduced in Blender 3.5

Thanks for the report. I can confirm. It looks like a regression introduced in Blender 3.5
Germano Cavalcante added
Module
VFX & Video
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-11-13 20:39:25 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-13 23:36:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114787
No description provided.