source/blender/editors/transform/transform_convert_sequencer.cc
@@ -221,10 +221,6 @@ static TransData *SeqToTransData(Scene *scene,
   unit_m3(td->mtx);
   unit_m3(td->smtx);
 
-  /* Time Transform (extend) */
-  td->val = td2d->loc;
-  td->ival = td2d->loc[0];
-
   return td;
 }
 
